Resolve conflicts when merging